--- a/popply/src/main/popply/package.json
+++ b/popply/src/main/popply/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8080",
