--- a/popply/src/main/popply/package.json
+++ b/popply/src/main/popply/package.json
@@ -13,6 +13,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
