--- a/popply/src/main/resources/application.properties
+++ b/popply/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=popply
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.50.176:1521/xe
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
-#spring.datasource.username=temp
-spring.datasource.username=springboot
+spring.datasource.username=temp
+#spring.datasource.username=springboot
 spring.datasource.password=1234
 spring.datasource.hikari.maximum-pool-size=5
 
