--- a/popply/src/main/popply/package.json
+++ b/popply/src/main/popply/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "ckeditor5": "^43.1.0",
     "react": "^18.3.1",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-native": "^0.75.2",
