--- a/popply/src/main/resources/application.properties
+++ b/popply/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=popply
 # log4jdbc console logging
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
-#spring.datasource.username=temp
-spring.datasource.username=springboot
+spring.datasource.username=temp
+#spring.datasource.username=springboot
 spring.datasource.password=1234
 spring.datasource.hikari.maximum-pool-size=5
 
