--- a/popply/src/main/resources/application.properties
+++ b/popply/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=popply
 
 # log4jdbc console logging
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/x
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.50.146:1521/x
 spring.datasource.username=temp
 #spring.datasource.username=springboot
 spring.datasource.password=1234
