--- a/popply/build.gradle
+++ b/popply/build.gradle
@@ -47,6 +47,10 @@ dependencies {
    
    // Password Crypto
    implementation 'org.springframework.security:spring-security-crypto:6.3.1'
+   
+   // https://mvnrepository.com/artifact/commons-io/commons-io
+	 implementation group: 'commons-io', name: 'commons-io', version: '2.16.1'
+   
 }
 
 tasks.named('test') {
