--- a/popply/src/main/resources/application.properties
+++ b/popply/src/main/resources/application.properties
@@ -2,8 +2,16 @@ spring.application.name=popply
 
 # log4jdbc console logging
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+########################### DB Connections ###############################
+# localhost
 #spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/x
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.50.146:1521/xe
+
+# tjoeun static
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.50.146:1521/xe
+
+# etc loopback
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@127.0.0.1:1521/xe
+##########################################################################
 spring.datasource.username=temp
 #spring.datasource.username=springboot
 spring.datasource.password=1234
