--- a/popply/src/main/resources/application.properties
+++ b/popply/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=popply
 
+server.port=8080
+
 # log4jdbc console logging
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 ########################### DB Connections ###############################
 # localhost
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/x
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
 
 # tjoeun static
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.50.146:1521/xe
